--- a/week02-demo/pages/weather/weather.wxml
+++ b/week02-demo/pages/weather/weather.wxml
@@ -1,2 +1,9 @@
 <!--pages/weather/weather.wxml-->
-<text>pages/weather/weather.wxml</text>
+<text>{{geo_location}}</text>
+<view>温度：{{weather_now.temp}}℃</view>
+<view>湿度：{{weather_now.humidity}}%</view>
+<view>气压：{{weather_now.pressure}}hPa</view>
+<view>能见度：{{weather_now.vis}}km</view>
+<view>风向：{{weather_now.windDir}}</view>
+<view>风速：{{weather_now.windSpeed}}km/h</view>
+<view>风力：{{weather_now.windScale}}级</view>
